--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "author": "Gina Rico",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.6.1",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
+    "jest": "^29.6.1",
     "through2-map": "^3.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
